# pti-projects

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  astro.config.mjs  flags.sh  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: main.yml
_astro/: index.BKsmNXln.css
extra/: shell.html
extra/cmake/: batteries.cmake  cute.cmake  dbgui.cmake  dr.cmake  imgui.cmake  macros.cmake  pti.cmake  sokol.cmake  stb.cmake  tracy.cmake
libs/batteries/: actor.cpp  actor.h  assets.cpp  assets.h  coordinate.h  entity.cpp  entity.h  gamestate.h  helper.h  juice.cpp  juice.h  math.h  palettes.h  physics.h  registry.h  scene.h  solid.cpp  solid.h  world.h
libs/batteries/entity/: actor.cpp  actor.h  solid.h
libs/cute/: cute.c  cute_aseprite.h  update.sh
libs/dbgui/: dbgui.cpp
libs/dr/: update.sh
libs/imgui/: update.sh
libs/pti/: platform.c  platform_debug.cpp  platform_gl.c  platform_gl.cpp  platform_sokol.c  pti.h  update.sh
libs/sokol/: sokol.c  update.sh
libs/stb/: update.sh
libs/tracy/: update.sh
platform/: opengl.cpp
projects/: CMakeLists.txt
projects/coinrush/: CMakeLists.txt  assets.data  assets.js  coinrush.data  coinrush.js  index.html
projects/coinrush/assets/: bullet.ase  cannon.ase  coin.ase  collect.ase  collect2.ase  door.ase  heart.ase  palette.hex  tilemap.ase
projects/coinrush/assets/levels/: 01.ase  02.ase  03.ase  04.ase  05.ase  06.ase
projects/coinrush/src/: bank.cpp  bank.h  gamestate.cpp  gamestate.h  main.cpp
projects/coinrush/src/entity/: actor.cpp  actor.h  solid.cpp  solid.h
projects/coinrush/src/entity/actor/: bullet.cpp  bullet.h  coin.cpp  coin.h  effect.cpp  effect.h  flag.cpp  flag.h  goomba.cpp  goomba.h  player.cpp  player.h  shooter.cpp  shooter.h
projects/coinrush/src/entity/solid/: platform.h  shooter.cpp  shooter.h
projects/coinrush/src/scene/: game.cpp  game.h
projects/controller/: CMakeLists.txt  assets.data  assets.js  controller.data  controller.js  index.html
projects/controller/assets/: btn_a.ase  btn_b.ase  btn_down.ase  btn_left.ase  btn_lshoulder.ase  btn_right.ase  btn_rshoulder.ase  btn_select.ase  btn_start.ase  btn_up.ase  btn_x.ase  btn_y.ase  palette.ase  palette.hex
projects/controller/src/: bank.cpp  bank.h  gamestate.cpp  gamestate.h  main.cpp
projects/controller/src/scene/: menu.cpp
projects/dungeon/: CMakeLists.txt
projects/dungeon/assets/: link.ase
projects/dungeon/src/: gamestate.cpp  gamestate.h  main.cpp
projects/dungeon/src/scene/: game.cpp
projects/menu/: CMakeLists.txt  assets.data  assets.js  index.html  menu.js
projects/menu/src/: bank.cpp  bank.h  gamestate.cpp  gamestate.h  main.cpp
projects/menu/src/scene/: menu.cpp  menu.h
projects/platformer/: CMakeLists.txt  assets.data  assets.js  index.html  platformer.js
projects/platformer/assets/: dog.ase  dust1.ase  dust2.ase  tilemap-Sheet.ase  tilemap.ase  tilemap_2.ase  tilemap_test.ase  tileset.ase
projects/platformer/src/: bank.cpp  bank.h  gamestate.cpp  gamestate.h  main.cpp
projects/platformer/src/entity/: base.cpp  base.h  coin.cpp  coin.h  effect.cpp  effect.h  goomba.cpp  goomba.h  mob.cpp  mob.h  player.cpp  player.h  projectile.cpp  projectile.h  registry.cpp  registry.h  shooter.cpp  shooter.h
projects/platformer/src/lib/: assets.cpp  assets.h
projects/platformer/src/world/: coordinate.h
projects/rocktoss/: CMakeLists.txt  assets.data  assets.js  index.html  rocktoss.data  rocktoss.js
projects/rocktoss/assets/: bullet.ase  dog.ase  font.ase  palette.hex  tilemap.ase
projects/rocktoss/src/: bank.cpp  bank.h  gamestate.cpp  gamestate.h  main.cpp
projects/rocktoss/src/entity/: actor.cpp  actor.h
projects/rocktoss/src/scene/: game.cpp  game.h  menu.cpp  menu.h
projects/samples/: CMakeLists.txt  moire.c  mosaic.c  palettes.h  rosecurve.c
projects/samples/moire/: index.html  moire.js
projects/samples/mosaic/: index.html  mosaic.js
projects/samples/rosecurve/: index.html  rosecurve.js
projects/towerfall-physics/: CMakeLists.txt  assets.data  assets.js  index.html  towerfall-physics.data  towerfall-physics.js
projects/towerfall-physics/assets/: dog.ase  platform.ase  tilemap.ase
projects/towerfall-physics/src/: bank.cpp  bank.h  gamestate.cpp  gamestate.h  main.cpp
projects/towerfall-physics/src/entity/: actor.cpp  actor.h  base.cpp  base.h  registry.cpp  registry.h  solid.cpp  solid.h
projects/towerfall-physics/src/entity/actor/: player.cpp  player.h
projects/towerfall-physics/src/entity/solid/: platform.cpp  platform.h
projects/towerfall-physics/src/scene/: game.cpp  game.h
projects/wasteland/: CMakeLists.txt
projects/wasteland/assets/: sweetie-16.ase  tilemap.ase
projects/wasteland/src/: bank.cpp  bank.h  main.cpp
projects/wasteland/src/scene/: game.cpp  game.h
projects/zelda/: CMakeLists.txt  assets.data  assets.js  index.html  zelda.data  zelda.js
projects/zelda/assets/: link.ase  palette.hex  tilemap.ase  tileset.ase
projects/zelda/src/: bank.cpp  bank.h  gamestate.cpp  gamestate.h  main.cpp
projects/zelda/src/scene/: game.cpp  game.h
projects/zombies/: CMakeLists.txt  assets.data  assets.js  index.html  zombies.data  zombies.js
projects/zombies/assets/: bullet.ase  coin.ase  heart.ase  tilemap.ase  zombie.ase
projects/zombies/src/: bank.cpp  bank.h  gamestate.cpp  gamestate.h  main.cpp
projects/zombies/src/entity/: actor.cpp  base.cpp  base.h  registry.cpp  registry.h  solid.cpp  solid.h
projects/zombies/src/entity/actor/: bullet.cpp  bullet.h  coin.cpp  coin.h  effect.cpp  effect.h  player.cpp  player.h  zombie.cpp  zombie.h
projects/zombies/src/scene/: game.cpp  game.h
projects/zombies/src/world/: coordinate.h  grid.h  tilemap.cpp  tilemap.h
website/public/projects/: platformer  samples
website/src/: consts.ts
website/src/components/: Demo.astro  Meta.astro  Showcase.astro
website/src/content/: config.ts
website/src/content/projects/: coinrush.md  controller.md  menu.md  rocktoss.md  (+4 more)
website/src/integrations/: symlink.ts
website/src/pages/: index.astro
website/src/styles/: global.css
(+14 files in other folders)
